apps/openbao/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-openbao
  labels:
    app.kubernetes.io/part-of: leptostack
    pod-security.kubernetes.io/enforce: restricted
