apps/openbao/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-same-namespace
  namespace: ${cluster_name}-openbao
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-operators
  namespace: ${cluster_name}-openbao
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: flux-system
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-internal-services
  namespace: ${cluster_name}-openbao
spec:  
  podSelector:
    matchLabels:
      app.kubernetes.io/name: openbao
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/part-of: leptostack
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: external-secrets
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: crossplane-system
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-${cluster_name}
